<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <EditText
        android:id="@+id/editText_phonenum"
        android:hint="@string/hint_phone"
        android:singleLine="true"
        android:maxLength="30"
        android:background="@drawable/input_box"
        android:paddingLeft="5dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="phone" >

        <requestFocus />
    	</EditText>

    	<EditText
        android:id="@+id/editText_password"
        android:hint="@string/hint_password"
        android:singleLine="true"
        android:maxLength="30"
        android:background="@drawable/input_box"
        android:paddingLeft="5dp"
        android:layout_margin="30dp"
        android:layout_below="@id/editText_phonenum"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword" />
    	
    	<Button
    	    android:id="@+id/button_login"
    	    android:layout_below="@id/editText_password"
    	    android:layout_alignLeft="@id/editText_password"
    	    android:layout_width="80dp"
    	    android:layout_height="40dp"
    	    android:layout_centerHorizontal="true"
    	    android:background="@drawable/button"
    	    android:text="@string/button_login" 
    	    android:textColor="#000000"/>

    	<Button
    	    android:id="@+id/button_register"
    	    android:layout_width="80dp"
    	    android:layout_height="40dp"
    	    android:layout_below="@id/editText_password"
    	    android:layout_alignRight="@id/editText_password"
    	    android:background="@drawable/button"
    	    android:text="@string/button_register" 
    	    android:textColor="#000000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_welcome"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/textview_tip"
                android:textColor="#EE0000" />
            
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>